# conan-config

./: README.md
templates/command/new/fickle/cxx-exe/{{name}}/: CMakeLists.txt  conanfile.py  {{'README.md'}}
templates/command/new/fickle/cxx-exe/{{name}}/src/: example.cpp  example.hpp  main.cpp
templates/command/new/fickle/cxx-exe/{{name}}/test/: CMakeLists.txt
templates/command/new/fickle/cxx-exe/{{name}}/test/src/: example.cpp
templates/command/new/fickle/cxx-exp/{{name}}/: CMakeLists.txt  conanfile.py  {{name}}.cpp
templates/command/new/fickle/cxx-header-only/{{name}}/: CMakeLists.txt  conanfile.py
templates/command/new/fickle/cxx-header-only/{{name}}/include/: {{name}}.hpp
templates/command/new/fickle/cxx-header-only/{{name}}/include/{{name}}/details/: example.hpp
templates/command/new/fickle/cxx-lib/{{name}}/: CMakeLists.txt  Doxyfile  conanfile.py  {{"README.md"}}
templates/command/new/fickle/cxx-lib/{{name}}/include/: {{name}}.hpp
templates/command/new/fickle/cxx-lib/{{name}}/include/{{name}}/details/: example.hpp
templates/command/new/fickle/cxx-lib/{{name}}/src/: example.cpp
templates/command/new/fickle/cxx-lib/{{name}}/test/: CMakeLists.txt
templates/command/new/fickle/cxx-lib/{{name}}/test/src/: example.cpp
